--- a/package.json
+++ b/package.json
@@ -12,17 +12,26 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.1.0",
+    "@angular/cdk": "^17.3.6",
     "@angular/common": "^17.1.0",
     "@angular/compiler": "^17.1.0",
     "@angular/core": "^17.1.0",
+    "@angular/fire": "^17.0.1",
     "@angular/forms": "^17.1.0",
+    "@angular/material": "^17.3.6",
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/platform-server": "^17.1.0",
     "@angular/router": "^17.1.0",
     "@angular/ssr": "^17.1.3",
+    "@fortawesome/fontawesome-free": "^6.5.2",
+    "@kolkov/ngx-gallery": "^2.0.1",
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.3",
     "express": "^4.18.2",
+    "luxon": "^3.4.4",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.10.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
@@ -32,6 +41,7 @@
     "@angular/compiler-cli": "^17.1.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^18.18.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
