--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
     "luxon": "^3.4.4",
+    "moment": "^2.30.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.8",
     "tslib": "^2.3.0",
@@ -43,6 +44,7 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/luxon": "^3.4.2",
+    "@types/moment": "^2.13.0",
     "@types/node": "^18.18.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
