Añadir configuración de trabajador de servicio y manifiesto para soporte PWA; refactorizar proveedores Firebase y actualizar plantillas HTML para mejorar la accesibilidad.

--- a/angular.json
+++ b/angular.json
@@ -59,7 +59,8 @@
                   "maximumError": "50mb"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "serviceWorker": "ngsw-config.json"
             },
             "development": {
               "optimization": false,
