Actualizar rutas de manifiesto y agregar archivos de íconos para soporte PWA

--- a/firebase.json
+++ b/firebase.json
@@ -8,7 +8,7 @@
     ],
     "headers": [
       {
-        "source": "/manifest.webmanifest",
+        "source": "/assets/manifest.webmanifest",
         "headers": [
           { "key": "Content-Type", "value": "application/manifest+json" }
         ]
@@ -16,7 +16,7 @@
     ],
     "rewrites": [
       {
-        "source": "!/manifest.webmanifest",
+        "source": "**",
         "destination": "/index.html"
       }
     ]
