--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,9 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/manifest.webmanifest",
+              "src/assets/icons",
+              "src/assets/screenshots",
+              "src/assets/manifest.webmanifest"
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
@@ -110,7 +112,9 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/manifest.webmanifest",
+              "src/assets/icons",
+              "src/assets/screenshots",
+              "src/assets/manifest.webmanifest"
             ],
             "styles": [
               "@angular/material/prebuilt-themes/pink-bluegrey.css",
